--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Eazepark</title>
   <link rel="icon" href="favicon.jpg">
   <img src="{{ url_for('static', filename='tez.png') }}" alt="Picture">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap">
